[package]
name = "git-clean"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
color-eyre = "0.6.2"
dirs = "5.0.1"
futures = "0.3.29"
git2 = "0.18.1"
lazy_static = "1.4.0"
octocrab = "0.32.0"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.0"
smallstr = "0.3.0"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
