[package]
name = "git-clean"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
futures = "0.3.31"
git2 = "0.20.2"
lazy_static = "1.5.0"
octocrab = "0.46.0"
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive"] }
slog = "2.8.0"
slog-async = "2.8.0"
slog-term = "2.9.2"
smallstr = "0.3.1"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
